    - A collection of nation sub commands which are given to everyone by default.
      - Each node doesn't do anything as there are further subcommands with more permission tests.
    - Fixes complicated townyperms setups not handling nation command refactor 0.97.3.2.
  - New Placeholder: %townyadvanced_player_location_plotgroup_name%
    - Shows the PlotGroup name if the player location has a PlotGroup.
    - Closes #5539.
  - Fix the default public town setting not being used.
  - Fix a typo in a lang key use, courtesy of Warriorrrr with PR #5540.
  - Allow economy.new_expand.price_claim_townblock_refund to be negative, meaning towns will be charged money to unclaim land.
    - Closes #3650.
  - Prevent the theft of axolotls, courtesy of Warriorrrr with PR #5542.
  - Fix minecart names in ItemLists, courtesy of Warriorrrr with PR #5546.
  - Fix ChorusFlowers not being protected from projectiles.
  - Fix transfering the last plot from a plotgroup into another leaving an empty plotgroup, vulnerable to errors.
  - New languages: es-MX, es-EC, es-CL, es-UY, es-VE.
  - API: Deprecated a bunch of abstract TownyDataSource methods that have been pointing to long-deprecated methods.
    - Older plugins might still be using these, instructions for updating are included in the javadocs.
  - Add in forwards compatibilty for server which update to the forthcoming custom townblocks, but then downgrade.
0.97.5.4:
  - Added Custom TownBlockTypes, courtesy of Warriorrrr with PR #5388.
    - TownBlocks are now able to be created in the config and also via other plugins that use our API.
    - All of the previous townblocktypes will be imported to the new config section.
    - Each TownBlockType has a name, cost, tax, map character, itemuse list, switch list, and allowed blocks list.
  - New Command: /towny allowedblocks 
    - Used to display what blocks are permitted to be used on TownBlockTypes.
  - Removed Command: /towny farmblocks
    - Replaced with /towny allowedblocks.